[gd_scene load_steps=7 format=3 uid="uid://dgc1yyonghtij"]

[ext_resource type="Script" uid="uid://wu81okex2ct5" path="res://scripts/end_screen.gd" id="1_6q23a"]
[ext_resource type="FontFile" uid="uid://q45m5gpswn2s" path="res://sprites/Minecraft.ttf" id="2_1imq6"]
[ext_resource type="AudioStream" uid="uid://34hyubjrs70e" path="res://audio/typing_sound.wav" id="3_1imq6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1imq6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1imq6"]
bg_color = Color(1, 1, 1, 0.3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d7okc"]
bg_color = Color(1, 1, 1, 0.2)

[node name="EndScreen" type="CanvasLayer"]
script = ExtResource("1_6q23a")

[node name="BlackBackground" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="DialogueLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 18.0
offset_right = 313.0
offset_bottom = 41.0
theme_override_fonts/font = ExtResource("2_1imq6")
text = "\"Huh, I didn't think you'd actually do it... Guess I can't call you mortal now\""
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="."]
offset_left = 87.0
offset_top = 63.0
offset_right = 263.0
offset_bottom = 79.0
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("2_1imq6")
text = "Total Souls Collected: 0"

[node name="RestartButton" type="Button" parent="."]
offset_left = 64.0
offset_top = 119.0
offset_right = 263.0
offset_bottom = 150.0
theme_override_fonts/font = ExtResource("2_1imq6")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1imq6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1imq6")
theme_override_styles/hover = SubResource("StyleBoxFlat_d7okc")
text = "But... You Still Owe More"
flat = true

[node name="TypeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1imq6")
volume_db = -10.0
